feat(env): configurar obtenção de variáveis de ambiente do Supabase

--- a/gosnack-dashboard/.env.example
+++ b/gosnack-dashboard/.env.example
@@ -1,1 +1,6 @@
 # Modelo de Variáveis de Ambiente
+
+# Supabase
+NEXT_PUBLIC_SUPABASE_URL=
+NEXT_PUBLIC_SUPABASE_PUBLISHABLE_KEY=
+NEXT_SUPABASE_ANON_KEY=
