--- a/gosnack-dashboard/package.json
+++ b/gosnack-dashboard/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@base-ui/react": "^1.2.0",
+    "@hookform/resolvers": "^5.2.2",
     "@hugeicons/core-free-icons": "^3.1.1",
     "@hugeicons/react": "^1.1.5",
     "@supabase/ssr": "^0.8.0",
